<resources>
    <string name="app_name">Football Quiz App</string>
    <string name="ques_1">1. What does FA in FA Cup stands for</string>
    <string name="ques_2">2. Select the two teams that played in the FA Cup 2017 finals.</string>
    <string name="ques_3">3. Which of this team has the most win in the German Bundesliga?</string>
    <string name="ques_4">4. The fastest goal scored in a football match was in? </string>
    <string name="ques_5">5. How many times has Arsenal won the FA Cup?</string>
    <string name="ques_6">6. What\'s the highest number of goals ever scored in a football match? </string>
    <string name="ques_7">7. How many times has Nigeria won the World Cup? \nSelect all correct answers</string>
    <string name="ques_8">8. Man Utd stands for?</string>
    <string name="ques_9">9. In what year did Nigeria win the Olympic gold for football?</string>
    <string name="submit">Submit All</string>
    <string name="enter_your_answer">Enter your answer here.</string>

    <!--Question 1 answers Options-->
    <string name="ques_1_answer_a">A. Free Agent</string>
    <string name="ques_1_answer_b">B. Football Association</string>
    <string name="ques_1_answer_c">C. First Aid</string>
    <string name="ques_1_answer_d">D. Football Agent</string>

    <!--Question 2 answers Options-->
    <string name="ques_2_answer_a">A. Arsenal</string>
    <string name="ques_2_answer_b">B. Manchester City</string>
    <string name="ques_2_answer_c">C. Man Utd</string>
    <string name="ques_2_answer_d">D. Chelsea</string>


    <!--Question 3 answers Options-->
    <string name="ques_3_answer_a">A. Borussia Dortmund</string>
    <string name="ques_3_answer_b">B. Werder Bremen</string>
    <string name="ques_3_answer_c">C. FC Bayern Munich</string>
    <string name="ques_3_answer_d">D. FC Koln</string>

    <!--Question 4 answers Options-->
    <string name="ques_4_answer_a">A. 2 sec.</string>
    <string name="ques_4_answer_b">B. 8 sec.</string>
    <string name="ques_4_answer_c">C. 5 sec.</string>
    <string name="ques_4_answer_d">D. 6 sec.</string>

    <!--Question 5 answers Options-->
    <string name="ques_5_answer_a">A. 10</string>
    <string name="ques_5_answer_b">B. 7</string>
    <string name="ques_5_answer_c">C. 8</string>
    <string name="ques_5_answer_d">D. 13</string>

    <!--Question 6 answers Options-->
    <string name="ques_6_answer_a">A. 149</string>
    <string name="ques_6_answer_b">B. 79</string>
    <string name="ques_6_answer_c">C. 39</string>
    <string name="ques_6_answer_d">D. 40</string>

    <!--Question 7 answers Options-->
    <string name="ques_7_answer_a">A. 1</string>
    <string name="ques_7_answer_b">B. 3</string>
    <string name="ques_7_answer_c">C. 0</string>
    <string name="ques_7_answer_d">D. 2#8211;2</string>
</resources>
