<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.m6code.footballquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!--Question 1 and Options-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques_1" />

        <LinearLayout
            style="@style/QuesOption"
            android:paddingLeft="8dp"
            android:paddingStart="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_1_answer_a" />
        </LinearLayout>

        <LinearLayout
            style="@style/QuesOption"
            android:paddingLeft="8dp"
            android:paddingStart="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_1_answer_b" />
        </LinearLayout>

        <LinearLayout
            style="@style/QuesOption"
            android:paddingLeft="8dp"
            android:paddingStart="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_1_answer_c" />
        </LinearLayout>

        <LinearLayout
            style="@style/QuesOption"
            android:paddingLeft="8dp"
            android:paddingStart="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_1_answer_d" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>
